[package]
name = "gigabytectl"
version = "0.1.4"
edition = "2024"
description = "A simple Rust-based TUI tool for controlling laptops using the gigabyte-laptop-wmi kernel module."
license = "MIT"
repository = "https://github.com/Code-Sapling/gigabytectl"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
